# Clipper2D

./: CMakeLists.txt  Readme.md
Clipper/: CMakeFiles.cmake  CMakeLists.txt  Clipper.cpp  Clipper.hpp  Vector2.hpp
Tests/: CMakeFiles.cmake  CMakeLists.txt  main.cpp
Tests/Data/: Test1.json  Test2.json  Test3.json  Test4.json
